--- a/Tex/AV-gradu.tex
+++ b/Tex/AV-gradu.tex
@@ -159,74 +159,59 @@ Kielijelpin kirjoitusviestinnän sivuilla keskitytään tieteellisen kirjoittami
 \section{Theoretical background}
 \label{sec:theory-background}
 
-
 \subsection{Low Mass X-ray Binaries}
-\label{subsec:lmxbs}
+\label{sec:lmxbs}
 
 \subsubsection{Nuclear reaction network}
-\label{subsec:nrn}
+\label{sec:nrn}
 
 \subsubsection{Rapid Proton Capture Process}
-\label{subsec:rpprocess}
+\label{sec:rpprocess}
 
 \subsubsection{Total Reaction Rate}
-\label{subsec:trr}
+\label{sec:trr}
 
 \subsubsection{Light Emission Curves}
-\label{subsec:lec}
-
+\label{sec:lec}
 
 \subsection{TALYS}
 \label{sec:talys}
 
 \subsubsection{Hauser-Feshbach statistical model}
-\label{subsec:HFsm}
+\label{sec:HFsm}
 
 \subsubsection{Parameters}
-\label{subsec:tparams}
-
+\label{sec:tparams}
 
 \subsection{Winnet}
 \label{sec:winnet}
 
+
 \section{Methods and materials}
 \label{sec:methods-and-materials}
 
+\subsection{Nuclear masses measured at IGISOL}
+\label{sec:igisol}
 
+\subsection{Usage of TALYS}
+\label{sec:talysmethod}
 
+\subsection{Usage of Winnet}
+\label{sec:winnetmethod}
+
+\subsection{Simulated Light Curves}
+\label{sec:slc}
 
 \section{Results}
 \label{sec:results}
 
-% Tulokset esittelee ja kommentoi tutkimuksen tuloksia normaalisti tutkimusongelmien esittämisjärjestyksessä.
-
-% \begin{table}[h]
-%    \centering
-%    \caption{Selkeä hinnasto}
-%    \begin{tabular}{llr} \toprule
-%       \multicolumn{2}{c}{Artikkeli} \\ \cmidrule(r){1-2}
-%       Eläin    & Kuvaus       & hinta (mk) \\ \midrule
-%       Hyttynen & grammoittain &  41,50 \\
-%                & kappaleelta  &   0,05 \\
-							
-%       Gnu      & täytetty     & 360,00 \\
-%       Emu      & täytetty     & 121,30 \\
-%       Vyötiäinen & pakastettu &  38,40 \\ \bottomrule
-%    \end{tabular}
-% \end{table}
-
-% \begin{figure}[htp]
-%    \centering
-%    \includegraphics[width=\textwidth]{mallikuvio.pdf}
-%    \caption{Valmistuneiden kandidaatintutkielmien jakauma tekijän opiskeluvuoden mukaan Jyväskylän yliopiston fysiikan laitoksella 2014 ($n = 42$); tutkintojen jakauma opiskeluvuoden mukaan, kun tutkielma on valmistunut 2014 ($n = 29$; tilanne 4.3.2015). (Kuva: Jussi Maunuksela, 2015)}
-%    \label{fig:esim-kuvio}
-% \end{figure}
-
+% Tulokset esittelee ja kommentoi tutkimuksen tuloksia 
+% normaalisti tutkimusongelmien esittämisjärjestyksessä.
 
 \section{Conclusions}
 \label{sec:conclusions}
 
-% Loppuluvussa arvioidaan tutkimusta ja sen tuloksia. \lipsum[1]
+% Loppuluvussa arvioidaan tutkimusta ja sen tuloksia. 
 
 \nocite{*}
 
