Renaming and adding total reaction rate formula

--- a/Thesis/AV-gradu.tex
+++ b/Thesis/AV-gradu.tex
@@ -167,10 +167,19 @@ Kielijelpin kirjoitusviestinnän sivuilla keskitytään tieteellisen kirjoittami
 
 \subsubsection{Rapid Proton Capture Process}
 \label{sec:rpprocess}
+% Hot CNO cycle. Hydrogen burning overcoming the Coulomb barrier via pp-chains. Temperatures for HCNO $\textrm{T} = 0.1 - 0.4 \: \textrm{GK}$. rapid proton capture goes beyond the HCNO cycle.
 
 \subsubsection{Total Reaction Rate}
 \label{sec:trr}
-
+Total reaction rate:
+\begin{equation}
+\begin{aligned}
+	N_{A} \langle \sigma v \rangle_{total} &= \sum_{i} N_{A} \langle \sigma v \rangle_{narrow\:resonances}^{i} \\ 
+	&+ \sum_{k} N_{A} \langle \sigma v \rangle_{broad\:resonances}^{k} \\ 
+	&+ N_{A} \langle \sigma v \rangle_{non\:resonant} \\ 
+	&+ N_{A} \langle \sigma v \rangle_{continuum}
+\end{aligned}
+\end{equation}
 \subsubsection{Light Emission Curves}
 \label{sec:lec}
 
@@ -199,11 +208,15 @@ Kielijelpin kirjoitusviestinnän sivuilla keskitytään tieteellisen kirjoittami
 \subsection{Usage of Winnet}
 \label{sec:winnetmethod}
 
-\subsection{Simulated Light Curves}
-\label{sec:slc}
+\subsection{Simulation of Light Curves}
+\label{sec:solc}
+
 
 \section{Results}
 \label{sec:results}
+
+\subsection{Simulated Light Curves}
+\label{sec:slc}
 
 % Tulokset esittelee ja kommentoi tutkimuksen tuloksia 
 % normaalisti tutkimusongelmien esittämisjärjestyksessä.
